tests/ast_interpreter/err_not_a_function.expected
<string>:3:5: error: not a function: 42
    a(8);
    ^^^^
