tests/ast_interpreter/err_not_a_function.nx
fun main() {
    var a = 42;
    a(8);
}
